Fix [version mobile des onglets] Ajout des comportements mobiles

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -115,6 +115,28 @@
   flex-grow: 1;
 }
 
+@media (max-width: $ds44-medium) {
+
+  .ds44-flex-wrap-medium {
+    flex-wrap: wrap;
+  }
+  .ds44-flex-grow1-medium {
+    flex-grow: 1;
+  }
+
+}
+
+@media (max-width: $ds44-large) {
+
+  .ds44-flex-wrap-large {
+    flex-wrap: wrap;
+  }
+  .ds44-flex-grow1-large {
+    flex-grow: 1;
+  }
+
+}
+
 /* === Grid utils === */
 
 .ds44-grid-middle {
