--- a/framework/scss/components/_onglets.scss
+++ b/framework/scss/components/_onglets.scss
@@ -28,7 +28,6 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 1.375em; /* 22px */
-    transition: all $ds44-timing-standard ease-in-out;
     position: relative;
     text-align: center;
 
@@ -49,6 +48,7 @@
     &::after {
         height: 5px;
         background-color: #000;
+        transition: all $ds44-timing-standard ease-in-out;
     }
 }
   
@@ -59,4 +59,48 @@
 [aria-hidden="true"].ds44-tabs__content {
     display: none;
 }
-  
+
+
+
+@media (max-width: $ds44-small) {
+
+    .ds44-tabs__link {
+        font-size: 1.125em; /* 18px */
+        padding: 1.5rem .5rem;
+    }
+
+    .ds44-blocBtnOnglets {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 100;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+
+        .ds44-ongletsBtnItem {
+            flex-grow: 1;
+            margin-right: 1px;
+            margin-left: 1px;
+
+            .ds44-btnStd {
+                text-align: left;
+                padding: 1rem 2.5rem 1rem 1rem;
+                width: 100%;
+                position: relative;
+                min-height: 60px;
+                line-height: 1.2;
+
+                .icon {
+                    font-size: 1rem;
+                    margin-left: 1rem;
+                    position: absolute;
+                    z-index: 10;
+                    right: .5rem;
+                    top: 1.8rem;
+                }
+            }
+        }
+    }
+
+}
